feat: change server name

--- a/default.conf
+++ b/default.conf
@@ -4,7 +4,7 @@ log_format custom_log '"Request: $request\n Status: $status\n Request_URI: $requ
 server {
     listen       80;
 
-    server_name  localhost;
+    server_name  engagement-core-nginx.fly.dev;
 
     access_log  /var/log/nginx/host.access.log  custom_log;
 
