feat(cors): add back cors headers for backend

--- a/default.conf
+++ b/default.conf
@@ -14,6 +14,11 @@ server {
     proxy_set_header   X-Forwarded-Host $server_name;
 
     location / {
+        proxy_hide_header 'Access-Control-Allow-Origin';
+        # To revert origin access to only frontend in the future
+        add_header 'Access-Control-Allow-Origin' '*';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+        add_header 'Access-Control-Allow-Headers' 'X-Requested-With,Accept,Content-Type, Origin' always;
         proxy_pass http://sin.engagement-core.internal:8080;
     }
 
