fix(cors): fix type in localhost origin

--- a/default.conf
+++ b/default.conf
@@ -16,7 +16,7 @@ server {
     location / {
         proxy_hide_header 'Access-Control-Allow-Origin';
         # To revert origin access to only frontend in the future
-        add_header 'Access-Control-Allow-Origin' 'http://localhost/3000';
+        add_header 'Access-Control-Allow-Origin' 'http://localhost:3000';
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
         add_header 'Access-Control-Allow-Headers' 'X-Requested-With,Accept,Content-Type, Origin' always;
         proxy_pass http://sin.engagement-core.internal:8080;
