feat(cors): pass original headers to core

--- a/default.conf
+++ b/default.conf
@@ -1,6 +1,5 @@
 log_format custom_log '"Request: $request\n Status: $status\n Request_URI: $request_uri\n Host: $host\n Client_IP: $remote_addr\n Proxy_IP(s): $proxy_add_x_forwarded_for\n Proxy_Hostname: $proxy_host\n Real_IP: $http_x_real_ip\n User_Client: $http_user_agent"';
 
-
 server {
     listen       80;
 
@@ -8,7 +7,7 @@ server {
 
     access_log  /var/log/nginx/host.access.log  custom_log;
 
-    proxy_set_header   Host $host;
+    proxy_set_header   Host $http_origin;
     proxy_set_header   X-Real-IP $remote_addr;
     proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header   X-Forwarded-Host $server_name;
